@@ -99,9 +99,17 @@
             <plugin>
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <!--<plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
